--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,8 +8,9 @@
   <header>
     <h1>Welcome to My Responsive Page</h1>
   </header>
+
   <section class="about">
-    <img src="kluh.png" alt="College Logo" class="responsive-img">
+<img src="kluh.jpj.png" alt="KLH Logo" class="responsive-img">
     <p>This page includes a responsive image and adjusts layout using CSS media queries.</p>
   </section>
 </body>
